[package]
name = "pyshop-task3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
crossbeam = "0.8.2"
hex = "0.4.3"
hex-literal = "0.4.1"
num_cpus = "1.16.0"
rayon = "1.7.0"
sha2 = "0.10.7"
